--- a/_teaching/energy_materials_yonsei.html
+++ b/_teaching/energy_materials_yonsei.html
@@ -8,11 +8,11 @@ date: 2016-04-01
 location: "Seoul, Korea"
 ---
 
-I spent the Easter period of 2016, 2017 and 2019 at Yonsei University, running postraduate lectures and workshops on computational investigation of energy materials. 
+<p>I spent the Easter period of 2016, 2017 and 2019 at Yonsei University, running postraduate lectures and workshops on computational investigation of energy materials.</p>
 
-Each year, the course was led by <a href="https://wmd-group.github.io">Prof. Aron Walsh</a>, who introduced the necessary quantum chemistry theory and practical methods for first-principles calculations. I delivered lectures on data-driven methods, and practical hands-on python workshops. 
+<p>Each year, the course was led by <a href="https://wmd-group.github.io">Prof. Aron Walsh</a>, who introduced the necessary quantum chemistry theory and practical methods for first-principles calculations. I delivered lectures on data-driven methods, and practical hands-on python workshops.</p>
 
-The courses were intensive, delivered as 3 x 3 hour lectures a week for 3 weeks. As such, it was a unique challenge of stamina for students and teachers! Luckily, everyone rose to the challenge and the students were exceedingly driven, whis made for an extremely rewarding teaching experience.
+<p>The courses were intensive, delivered as 3 x 3 hour lectures a week for 3 weeks. As such, it was a unique challenge of stamina for students and teachers! Luckily, everyone rose to the challenge and the students were exceedingly driven, whis made for an extremely rewarding teaching experience.</p>
 
 <img src='/images/yonsei_class_photo_2016.jpg'>
 
