--- a/_teaching/energy_materials_yonsei.html
+++ b/_teaching/energy_materials_yonsei.html
@@ -16,8 +16,8 @@ location: "Seoul, Korea"
 
 <img src='/images/yonsei_class_photo_2016.jpg'>
 
-Hats off to the other teachers of the course over the years, including <a href="https://www.northumbria.ac.uk/about-us/our-staff/w/lucy-whalley/">Lucy Whalley</a>, <a href="https://www.research.manchester.ac.uk/portal/jonathan.skelton.html">Jonathan Skelton</a> and  <a href="https://www.samanthahood.com.au/">Samathan Hood</a>.
+<p>Hats off to the other teachers of the course over the years, including <a href="https://www.northumbria.ac.uk/about-us/our-staff/w/lucy-whalley/">Lucy Whalley</a>, <a href="https://www.research.manchester.ac.uk/portal/jonathan.skelton.html">Jonathan Skelton</a> and  <a href="https://www.samanthahood.com.au/">Samathan Hood</a>.</p>
 
-<p>Below is an example presentation of mine from speakerdeck:</p>
+<p>Below is an example presentation of mine from the 2017 course:</p>
 
-<div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.1972%;"><iframe src="https://speakerdeck.com/player/06999fe950884e75a4b38dcc1347ff98" style="border: 0; top: 0; left: 0; width: 100%; height: 100%; position: absolute;" allowfullscreen scrolling="no" allow="encrypted-media"></iframe></div>
+<div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 74.9296%;"><iframe src="https://speakerdeck.com/player/cacd9f958183415ebc8bbd3665f5c3fd" style="border: 0; top: 0; left: 0; width: 100%; height: 100%; position: absolute;" allowfullscreen scrolling="no" allow="encrypted-media"></iframe></div>
