Add CDT teaching

--- a/_teaching/energy_materials_yonsei.html
+++ b/_teaching/energy_materials_yonsei.html
@@ -8,7 +8,7 @@ date: 2016-04-01
 location: "Seoul, Korea"
 ---
 
-<p>I spent the Easter period of 2016, 2017 and 2019 at Yonsei University, running postraduate lectures and workshops on computational investigation of energy materials.</p>
+<p>I spent the Easter period of 2016, 2017 and 2019 at Yonsei University, giving postraduate lectures and workshops on computational investigation into energy materials.</p>
 
 <p>Each year, the course was led by <a href="https://wmd-group.github.io">Prof. Aron Walsh</a>, who introduced the necessary quantum chemistry theory and practical methods for first-principles calculations. I delivered lectures on data-driven methods, and practical hands-on python workshops.</p>
 
