--- a/_teaching/pv_cdt_bath.html
+++ b/_teaching/pv_cdt_bath.html
@@ -5,7 +5,7 @@ type: "Postgraduate course"
 permalink: /teaching/pv_cdt_bath
 venue: "University of Bath, Physics and Chemistry"
 date: 2018-03-02
-location: "Seoul, Korea"
+location: "Bath, UK"
 ---
 
 <p>Towards the end of my time as a PhD student in Bath I helped to deliver workshops on the role of data and databases in materials discovery.</p>
